--- a/pom.xml
+++ b/pom.xml
@@ -53,4 +53,17 @@
         </plugins>
     </build>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.9.4</version>
+        </dependency>
+        <dependency>
+            <groupId>de.undercouch</groupId>
+            <artifactId>bson4jackson</artifactId>
+            <version>2.9.0</version>
+        </dependency>
+    </dependencies>
+
 </project>
