--- a/oop-round-rectangle/pom.xml
+++ b/oop-round-rectangle/pom.xml
@@ -9,20 +9,14 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>oop-main</artifactId>
+    <artifactId>oop-round-rectangle</artifactId>
+    <packaging>jar</packaging>
 
     <dependencies>
         <dependency>
             <groupId>by.bsuir</groupId>
             <artifactId>oop-common</artifactId>
             <version>1.0-SNAPSHOT</version>
-        </dependency>
-
-        <dependency>
-            <groupId>by.bsuir</groupId>
-            <artifactId>oop-round-rectangle</artifactId>
-            <version>1.0-SNAPSHOT</version>
-            <scope>runtime</scope>
         </dependency>
     </dependencies>
 
