--- a/pom.xml
+++ b/pom.xml
@@ -5,12 +5,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>by.bsuir</groupId>
-    <artifactId>by.bsuir.oop</artifactId>
+    <artifactId>oop</artifactId>
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>oop-main</module>
         <module>oop-round-rectangle</module>
-        <module>oopcommon</module>
         <module>oop-common</module>
     </modules>
 
