--- a/oop-main/pom.xml
+++ b/oop-main/pom.xml
@@ -24,6 +24,18 @@
             <version>1.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
+        <dependency>
+            <groupId>by.bsuir</groupId>
+            <artifactId>oop-checksum-checker</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>by.bsuir</groupId>
+            <artifactId>oop-checksum-saver</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>runtime</scope>
+        </dependency>
     </dependencies>
 
 </project>
