--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>oop-common</module>
         <module>oop-checksum-saver</module>
         <module>oop-checksum-checker</module>
+        <module>oop-packer-adapter</module>
     </modules>
 
     <packaging>pom</packaging>
